Closed Bug 386804 Opened 19 years ago Closed 19 years ago

"ASSERTION: Textrun cache not empty!" on shutdown if domwindows have leaked

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: roc)

References

Details

(Keywords: assertion, regression)

Attachments

(1 file)

The checkin for bug 385423 (a few hours ago) made it so that if domwindows leak, I get this assertion on shutdown: ###!!! ASSERTION: Textrun cache not empty!: 'mCache.Count() == 0', file /Users/jruderman/trunk/mozilla/gfx/thebes/src/gfxTextRunWordCache.cpp, line 51 Is it expected that domwindow leaks trigger this assertion? If so, it should be turned into a warning to avoid making tinderboxes turn orange randomly (cf bug 386211).
Attached patch fixSplinter Review
trivial fix
Assignee: nobody → roc
Status: NEW → ASSIGNED
Attachment #270837 - Flags: review?(vladimir)
checked in
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: