Bug 386804. Make 'cache not empty' assertion into a warning. r=vlad